--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -16,11 +16,11 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsc --build tsconfig.build.json",
-    "dev": "tsc --build tsconfig.build.json --watch",
+    "build": "tsc --build",
+    "dev": "tsc --build --watch",
     "lint:js": "eslint .",
-    "lint:ts": "tsc -b tsconfig.json",
-    "prepack": "tsc --build tsconfig.build.json"
+    "lint:ts": "tsc --build --noEmit",
+    "prepack": "tsc --build"
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.12",
