--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -26,7 +26,7 @@
     "build": "node scripts/build.js",
     "dev": "node scripts/dev.js",
     "lint:js": "eslint .",
-    "lint:ts": "tsc -b tsconfig.json",
+    "lint:ts": "tsc --build --noEmit",
     "prepack": "node scripts/build.js"
   },
   "dependencies": {
