--- a/examples/with-docusaurus-algolia/package.json
+++ b/examples/with-docusaurus-algolia/package.json
@@ -15,11 +15,7 @@
     "write-translations": "docusaurus write-translations"
   },
   "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.5%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
