--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,9 +35,7 @@
       "import": "./dist/utils.js"
     }
   },
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "build": "tsc --build",
     "dev": "tsc --build --watch",
