Remove prettier tasks

--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "build:packages": "turbo run build --filter @markprompt/*...",
     "clean": "git clean -fdx -e .direnv/ -e \"examples/**/.env*\" -e \".husky/\"",
     "postinstall": "manypkg check",
-    "lint": "turbo run lint:biome lint:css lint:format lint:js lint:md lint:ts",
+    "lint": "turbo run lint:biome lint:css lint:js lint:md lint:ts",
     "lint:biome": "biome check",
     "lint:biome:ci": "biome ci --reporter=github",
-    "lint:ci": "turbo run lint:biome:ci lint:css lint:format lint:js lint:md lint:ts",
+    "lint:ci": "turbo run lint:biome:ci lint:css lint:js lint:md lint:ts",
     "lint:css": "stylelint \"**/*.css\"",
-    "lint:format": "prettier --check .",
     "lint:js": "eslint . --ignore-pattern \"coverage/\" --ignore-pattern \"examples/\" --ignore-pattern \"packages/\"",
     "lint:md": "remark . --frail",
     "lint:ts": "pnpm build:packages",
