Format using Biome (#428)
* Enable formatting with Biome

* Remove Prettier

* Fix formatting

* Remove prettier tasks

* Add changeset

--- a/package.json
+++ b/package.json
@@ -2,21 +2,17 @@
   "name": "markprompt",
   "private": true,
   "type": "module",
-  "workspaces": [
-    "examples/*",
-    "packages/*"
-  ],
+  "workspaces": ["examples/*", "packages/*"],
   "scripts": {
     "build": "turbo run build",
     "build:packages": "turbo run build --filter @markprompt/*...",
     "clean": "git clean -fdx -e .direnv/ -e \"examples/**/.env*\" -e \".husky/\"",
     "postinstall": "manypkg check",
-    "lint": "turbo run lint:biome lint:css lint:format lint:js lint:md lint:ts",
+    "lint": "turbo run lint:biome lint:css lint:js lint:md lint:ts",
     "lint:biome": "biome check",
     "lint:biome:ci": "biome ci --reporter=github",
-    "lint:ci": "turbo run lint:biome:ci lint:css lint:format lint:js lint:md lint:ts",
+    "lint:ci": "turbo run lint:biome:ci lint:css lint:js lint:md lint:ts",
     "lint:css": "stylelint \"**/*.css\"",
-    "lint:format": "prettier --check .",
     "lint:js": "eslint . --ignore-pattern \"coverage/\" --ignore-pattern \"examples/\" --ignore-pattern \"packages/\"",
     "lint:md": "remark . --frail",
     "lint:ts": "pnpm build:packages",
@@ -35,11 +31,9 @@
     "@typescript-eslint/parser": "^8.6.0",
     "@vitest/coverage-v8": "^1.6.0",
     "eslint": "8.57.1",
-    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-jest-dom": "^5.4.0",
-    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^7.1.0",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -48,8 +42,6 @@
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "msw": "^2.2.13",
-    "prettier": "^3.2.5",
-    "prettier-plugin-packagejson": "^2.5.0",
     "remark-cli": "^12.0.0",
     "remark-frontmatter": "^5.0.0",
     "remark-toc": "^9.0.0",
