--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -6,6 +6,14 @@
     "number-max-precision": 7,
     "selector-class-pattern": null,
     "selector-id-pattern": null,
-    "no-descending-specificity": null
+    "no-descending-specificity": null,
+    "function-linear-gradient-no-nonstandard-direction": null,
+    "named-grid-areas-no-invalid": null,
+    "no-invalid-position-at-import-rule": null,
+    "function-no-unknown": null,
+    "media-feature-name-no-unknown": null,
+    "property-no-unknown": null,
+    "unit-no-unknown": null,
+    "selector-anb-no-unmatchable": null
   }
 }
