--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "publish": "pnpm build:packages && changeset publish",
     "test": "vitest run --coverage",
     "test:watch": "vitest watch --coverage",
-    "version": "changeset version && biome ci --write . && pnpm install"
+    "version": "changeset version && pnpm install"
   },
   "dependencies": {
     "@biomejs/biome": "1.9.2",
