Apply and fix Biome complexity/correctness rules (#430)
* a11y recommended linting wip

* Linting

* Linting

* more fixes

* More fixes

* Update biome.jsonc

* Apply and fix biome complexity rules

* useDateNow

* correctness

* noUnusedImports

* noUnusedVariables

* Disable ESLint rules

* Fix test

* Fix formatting

* Fix formatting

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -40,6 +40,16 @@
             ]
           }
         }
+      },
+      "complexity": {
+        "recommended": true,
+        "noUselessUndefinedInitialization": "error",
+        "useDateNow": "error"
+      },
+      "correctness": {
+        "recommended": true,
+        "noUnusedFunctionParameters": "error",
+        "noUnusedImports": "error"
       }
     }
   },
