Enable Biome perf rules and fix issues

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -50,6 +50,9 @@
         "recommended": true,
         "noUnusedFunctionParameters": "error",
         "noUnusedImports": "error"
+      },
+      "performance": {
+        "recommended": true
       }
     }
   },
