--- a/biome.jsonc
+++ b/biome.jsonc
@@ -53,6 +53,9 @@
       },
       "performance": {
         "recommended": true
+      },
+      "security": {
+        "recommended": true
       }
     }
   },
