--- a/biome.jsonc
+++ b/biome.jsonc
@@ -56,6 +56,9 @@
       },
       "security": {
         "recommended": true
+      },
+      "style": {
+        "recommended": true
       }
     }
   },
