Update biome config

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -59,7 +59,10 @@
       },
       "style": {
         "recommended": true,
-        "noNonNullAssertion": "warn"
+        "noDefaultExport": "warn",
+        "noNonNullAssertion": "warn",
+        "useCollapsedElseIf": "error",
+        "useThrowOnlyError": "error"
       }
     }
   },
