Enable and fix Biome style ruleset (#439)
* Enable style ruleset

* Automatic safe fixes

* Automatic unsafe fixes

* Fix issues

* Update biome config

* changeset

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -56,6 +56,13 @@
       },
       "security": {
         "recommended": true
+      },
+      "style": {
+        "recommended": true,
+        "noDefaultExport": "warn",
+        "noNonNullAssertion": "warn",
+        "useCollapsedElseIf": "error",
+        "useThrowOnlyError": "error"
       }
     }
   },
