--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,19 +1,25 @@
 {
   "extends": ["stylelint-config-standard"],
   "rules": {
+    "block-no-empty": null,
     "custom-property-pattern": null,
+    "declaration-block-no-shorthand-property-overrides": null,
+    "font-family-no-duplicate-names": null,
+    "function-linear-gradient-no-nonstandard-direction": null,
+    "function-no-unknown": null,
+    "keyframe-block-no-duplicate-selectors": null,
+    "keyframe-declaration-no-important": null,
     "keyframes-name-pattern": null,
+    "media-feature-name-no-unknown": null,
+    "named-grid-areas-no-invalid": null,
+    "no-descending-specificity": null,
+    "no-duplicate-at-import-rules": null,
+    "no-invalid-position-at-import-rule": null,
     "number-max-precision": 7,
+    "property-no-unknown": null,
+    "selector-anb-no-unmatchable": null,
     "selector-class-pattern": null,
     "selector-id-pattern": null,
-    "no-descending-specificity": null,
-    "function-linear-gradient-no-nonstandard-direction": null,
-    "named-grid-areas-no-invalid": null,
-    "no-invalid-position-at-import-rule": null,
-    "function-no-unknown": null,
-    "media-feature-name-no-unknown": null,
-    "property-no-unknown": null,
-    "unit-no-unknown": null,
-    "selector-anb-no-unmatchable": null
+    "unit-no-unknown": null
   }
 }
