--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -14,11 +14,11 @@
   "main": "./dist/index.js",
   "files": ["dist"],
   "scripts": {
-    "build": "tsc --build",
-    "dev": "tsc --build --watch",
+    "build": "tsc --build tsconfig.build.json",
+    "dev": "tsc --build tsconfig.build.json --watch",
     "lint:js": "eslint .",
     "lint:ts": "tsc --build --noEmit",
-    "prepack": "tsc --build"
+    "prepack": "tsc --build tsconfig.build.json"
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.12",
