--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -10,5 +10,8 @@
   "license": "MIT",
   "main": "markprompt.css",
   "types": "./index.d.ts",
-  "files": ["markprompt.css", "index.d.ts"]
+  "files": [
+    "markprompt.css",
+    "index.d.ts"
+  ]
 }
