--- a/examples/with-function-calling/package.json
+++ b/examples/with-function-calling/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@markprompt/core": "workspace:*",
+    "@markprompt/css": "workspace:*",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-visually-hidden": "^1.0.3",
     "classnames": "^2.5.1",
@@ -21,7 +22,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "14.2.15",
+    "@next/eslint-plugin-next": "^14.2.15",
     "@types/react": "^18.2",
     "@types/react-dom": "^18.2"
   }
