--- a/examples/with-next/package.json
+++ b/examples/with-next/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "14.2.15",
+    "@next/eslint-plugin-next": "^14.2.15",
     "@types/react": "^18.2",
     "@types/react-dom": "^18.2"
   }
