--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -12,7 +12,9 @@
   "type": "module",
   "exports": "./dist/index.js",
   "main": "./dist/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc --build tsconfig.build.json",
     "dev": "tsc --build tsconfig.build.json --watch",
