--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,7 +15,12 @@
     "./init": "./dist/init.js"
   },
   "main": "dist/index.js",
-  "files": ["dist/globals.*", "dist/index.*", "dist/init.*", "dist/types.*"],
+  "files": [
+    "dist/globals.*",
+    "dist/index.*",
+    "dist/init.*",
+    "dist/types.*"
+  ],
   "scripts": {
     "analyze": "node scripts/analyze.js",
     "build": "node scripts/build.js",
