--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -28,5 +28,5 @@
     "lib": ["dom", "dom.iterable", "es2023"]
   },
   "include": ["src/"],
-  "exclude": ["**/node_modules", "dist/", ".turbo/"]
+  "exclude": [".turbo/", "**/node_modules", "dist/"]
 }
