add eslint-config package and port packages to flat config

--- a/examples/with-standalone-ticket-deflection/tsconfig.json
+++ b/examples/with-standalone-ticket-deflection/tsconfig.json
@@ -20,5 +20,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": [".", ".eslintrc.cjs"]
+  "include": [".", "eslint.config.js"]
 }
