--- a/examples/with-function-calling/tsconfig.json
+++ b/examples/with-function-calling/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".eslintrc.cjs"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "eslint.config.mjs"],
   "exclude": ["**/node_modules", ".next/"],
   "compilerOptions": {
     "allowJs": true,
