--- a/package.json
+++ b/package.json
@@ -27,18 +27,8 @@
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
     "@manypkg/cli": "^0.21.4",
-    "@typescript-eslint/eslint-plugin": "^8.6.0",
-    "@typescript-eslint/parser": "^8.6.0",
     "@vitest/coverage-v8": "^1.6.0",
-    "eslint": "8.57.1",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-jest-dom": "^5.4.0",
-    "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-react": "^7.36.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-testing-library": "^6.2.2",
-    "eslint-plugin-vitest": "^0.5.4",
+    "eslint": "^9.12.0",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "msw": "^2.2.13",
@@ -51,7 +41,6 @@
     "stylelint-formatter-github": "^1.0.1",
     "turbo": "^2.1.3",
     "typescript": "^5.6.2",
-    "typescript-eslint": "^7.7.0",
     "unified-prettier": "^2.0.1",
     "vitest": "^1.6.0"
   },
