--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -14,6 +14,7 @@
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.12.0",
     "@next/eslint-plugin-next": "^14.2.15",
+    "@tanstack/eslint-plugin-query": "^5.59.7",
     "@vitest/eslint-plugin": "^1.1.7",
     "eslint-config-turbo": "^2.1.3",
     "eslint-plugin-import-x": "^4.3.1",
