--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
     "@manypkg/cli": "^0.21.4",
+    "@markprompt/eslint-config": "workspace:*",
     "@vitest/coverage-v8": "^1.6.0",
     "eslint": "^9.12.0",
     "husky": "^9.0.11",
