--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -17,6 +17,7 @@
     "@tanstack/eslint-plugin-query": "^5.59.7",
     "@vitest/eslint-plugin": "^1.1.7",
     "eslint-config-turbo": "^2.1.3",
+    "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import-x": "^4.3.1",
     "eslint-plugin-promise": "^7.1.0",
     "eslint-plugin-react": "^7.37.1",
