--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,6 @@
     "checkJs": true,
     "noEmit": true
   },
-  "include": [".eslintrc.cjs", "test/"],
+  "include": ["eslint.config.mjs", "test/"],
   "exclude": ["**/node_modules", "examples/", "packages/"]
 }
