--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,28 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
+    /* Base Options: */
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "target": "es2022",
+    "allowJs": true,
     "checkJs": true,
-    "noEmit": true
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true,
+
+    /* Strictness */
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+
+    /* If NOT transpiling with TypeScript: */
+    "module": "preserve",
+    "noEmit": true,
+
+    /* If your code doesn't run in the DOM: */
+    "lib": ["es2022"]
   },
   "include": ["eslint.config.mjs", "test/"],
   "exclude": ["**/node_modules", "examples/", "packages/"]
