--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -11,6 +11,7 @@
     "lint:ts": "tsc --build --noEmit"
   },
   "dependencies": {
+    "@eslint/compat": "^1.2.0",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.12.0",
     "@next/eslint-plugin-next": "^14.2.15",
