--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "markprompt",
   "private": true,
   "type": "module",
-  "workspaces": ["examples/*", "packages/*"],
+  "workspaces": [
+    "examples/*",
+    "packages/*"
+  ],
   "scripts": {
     "build": "turbo run build",
     "build:packages": "turbo run build --filter @markprompt/*...",
@@ -41,14 +44,14 @@
     "stylelint-config-standard": "^36.0.0",
     "stylelint-formatter-github": "^1.0.1",
     "turbo": "^2.1.3",
-    "typescript": "^5.6.2",
+    "typescript": "^5.6.3",
     "unified-prettier": "^2.0.1",
     "vitest": "^1.6.0"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.17.2"
   },
-  "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228",
+  "packageManager": "pnpm@9.12.2",
   "pnpm": {
     "overrides": {
       "@types/react": "^18.2",
