--- a/package.json
+++ b/package.json
@@ -2,27 +2,25 @@
   "name": "markprompt",
   "private": true,
   "type": "module",
-  "workspaces": [
-    "examples/*",
-    "packages/*"
-  ],
+  "workspaces": ["examples/*", "packages/*"],
   "scripts": {
-    "build": "turbo run build",
     "build:packages": "turbo run build --filter @markprompt/*...",
+    "build": "turbo run build",
     "clean": "git clean -fdx -e .direnv/ -e \"examples/**/.env*\" -e \".husky/\"",
-    "postinstall": "manypkg check",
-    "lint": "turbo run lint:biome lint:css lint:js lint:md lint:ts",
-    "lint:biome": "biome check",
-    "lint:biome:ci": "biome ci --reporter=github",
+    "fix:biome": "biome check --write",
+    "lint:biome:ci": "biome ci --diagnostic-level=error --reporter=github",
+    "lint:biome": "biome check --diagnostic-level=error",
     "lint:ci": "turbo run lint:biome:ci lint:css lint:js lint:md lint:ts",
     "lint:css": "stylelint \"**/*.css\"",
     "lint:js": "eslint .",
     "lint:md": "remark . --frail",
     "lint:ts": "pnpm build:packages",
+    "lint": "turbo run lint:biome lint:css lint:js lint:md lint:ts",
+    "postinstall": "manypkg check",
     "prepare": "husky",
     "publish": "pnpm build:packages && changeset publish",
-    "test": "vitest run --coverage",
     "test:watch": "vitest watch --coverage",
+    "test": "vitest run --coverage",
     "version": "changeset version && biome check --write . && pnpm install"
   },
   "dependencies": {
