--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -12,26 +12,28 @@
     "lint:ts": "tsc --build --noEmit"
   },
   "dependencies": {
-    "@eslint/compat": "^1.2.0",
+    "@eslint/compat": "^1.2.1",
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.12.0",
+    "@eslint/js": "^9.13.0",
     "@next/eslint-plugin-next": "^14.2.15",
     "@tanstack/eslint-plugin-query": "^5.59.7",
     "@vitest/eslint-plugin": "^1.1.7",
-    "eslint-config-turbo": "^2.1.3",
+    "eslint-config-turbo": "^2.2.1",
     "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-astro": "^1.3.0",
     "eslint-plugin-import-x": "^4.3.1",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-promise": "^7.1.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-testing-library": "^6.4.0",
     "globals": "^15.11.0",
-    "typescript-eslint": "^8.9.0"
+    "typescript-eslint": "^8.10.0"
   },
   "devDependencies": {
     "@types/eslint__eslintrc": "^2.1.2",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^20",
-    "eslint": "^9.12.0"
+    "eslint": "^9.13.0"
   },
   "peerDependencies": {
     "eslint": ">= 9"
