--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "markprompt",
   "private": true,
   "type": "module",
-  "workspaces": ["examples/*", "packages/*"],
+  "workspaces": [
+    "examples/*",
+    "packages/*"
+  ],
   "scripts": {
     "build:packages": "turbo run build --filter @markprompt/*...",
     "build": "turbo run build",
@@ -41,7 +44,7 @@
     "stylelint": "^16.3.1",
     "stylelint-config-standard": "^36.0.0",
     "stylelint-formatter-github": "^1.0.1",
-    "turbo": "^2.1.3",
+    "turbo": "^2.2.1",
     "typescript": "^5.6.3",
     "unified-prettier": "^2.0.1",
     "vitest": "^1.6.0"
