--- a/examples/with-standalone-ticket-deflection/tsconfig.json
+++ b/examples/with-standalone-ticket-deflection/tsconfig.json
@@ -20,5 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": [".", "eslint.config.js"]
+  "include": [".", "eslint.config.js"],
+  "exclude": ["node_modules", "dist"]
 }
