--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -17,17 +17,18 @@
     "@eslint/js": "^9.13.0",
     "@next/eslint-plugin-next": "^14.2.15",
     "@tanstack/eslint-plugin-query": "^5.59.7",
+    "@typescript-eslint/parser": "^8.11.0",
     "@vitest/eslint-plugin": "^1.1.7",
     "eslint-config-turbo": "^2.2.1",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-astro": "^1.3.0",
     "eslint-plugin-import-x": "^4.3.1",
-    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-testing-library": "^6.4.0",
     "globals": "^15.11.0",
-    "typescript-eslint": "^8.10.0"
+    "typescript-eslint": "^8.11.0"
   },
   "devDependencies": {
     "@types/eslint__eslintrc": "^2.1.2",
