--- a/biome.jsonc
+++ b/biome.jsonc
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": []
+    "ignore": [".vscode"]
   },
   "formatter": {
     "enabled": true,
