--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-promise": "^7.1.0",
     "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-refresh": "^0.4.14",
     "eslint-plugin-testing-library": "^6.4.0",
     "globals": "^15.11.0",
     "typescript-eslint": "^8.11.0"
