pkg: add ./Markprompt exports key to @markprompt/react

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -10,9 +10,20 @@
   "license": "MIT",
   "sideEffects": false,
   "type": "module",
-  "exports": "./dist/index.js",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    },
+    "./Markprompt": {
+      "types": "./dist/Markprompt.d.ts",
+      "import": "./dist/Markprompt.js"
+    }
+  },
   "main": "./dist/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc --build tsconfig.build.json",
     "dev": "tsc --build tsconfig.build.json --watch",
