--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -45,7 +45,7 @@
     "downshift": "^9.0.4",
     "emittery": "^1.0.3",
     "immer": "^10.0.4",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "mdast-util-from-markdown": "^2.0.0",
     "mdast-util-to-string": "^4.0.0",
     "p-debounce": "^4.0.0",
@@ -63,7 +63,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.2",
     "@testing-library/user-event": "^14.5.2",
-    "@types/lodash": "^4.17.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3",
     "@types/react-dom": "^18.2",
     "@vitejs/plugin-react-swc": "^3.7.1",
