--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@changesets/cli": "^2.27.9",
     "@manypkg/cli": "^0.22.0",
     "@markprompt/eslint-config": "workspace:*",
+    "@vitest/coverage-v8": "^2.1.6",
     "eslint": "^9.15.0",
     "husky": "^9.0.11",
     "jsdom": "^25.0.1",
