fix peer deps errors

--- a/packages/docusaurus-theme-search/package.json
+++ b/packages/docusaurus-theme-search/package.json
@@ -12,7 +12,10 @@
   "type": "module",
   "exports": "./dist/index.js",
   "main": "dist/index.js",
-  "files": ["dist", "src/theme"],
+  "files": [
+    "dist",
+    "src/theme"
+  ],
   "scripts": {
     "build": "tsc --build",
     "lint:js": "eslint .",
@@ -22,7 +25,8 @@
   "dependencies": {
     "@docusaurus/types": "^3.2.1",
     "@markprompt/css": "workspace:*",
-    "@markprompt/react": "workspace:*"
+    "@markprompt/react": "workspace:*",
+    "acorn": "^8.14.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.2.1",
