--- a/examples/with-docusaurus-swizzled/package.json
+++ b/examples/with-docusaurus-swizzled/package.json
@@ -15,7 +15,11 @@
     "write-translations": "docusaurus write-translations"
   },
   "browserslist": {
-    "production": [">0.5%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.5%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
@@ -31,6 +35,7 @@
     "@markprompt/docusaurus-theme-search": "workspace:*",
     "@markprompt/react": "workspace:*",
     "@mdx-js/react": "^3.1.0",
+    "acorn": "^8.14.0",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
