--- a/examples/with-docusaurus/package.json
+++ b/examples/with-docusaurus/package.json
@@ -15,7 +15,11 @@
     "write-translations": "docusaurus write-translations"
   },
   "browserslist": {
-    "production": [">0.5%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.5%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
@@ -23,14 +27,17 @@
     ]
   },
   "dependencies": {
+    "@algolia/client-search": "^4.23.3",
     "@docusaurus/core": "^3.2.1",
     "@docusaurus/module-type-aliases": "^3.2.1",
     "@docusaurus/preset-classic": "^3.2.1",
     "@markprompt/docusaurus-theme-search": "workspace:*",
     "@mdx-js/react": "^3.1.0",
+    "acorn": "^8.14.0",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "search-insights": "^2.17.3"
   },
   "devDependencies": {
     "@docusaurus/tsconfig": "^3.2.1",
