--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -34,29 +34,29 @@
     "prepack": "tsc --build tsconfig.build.json"
   },
   "dependencies": {
-    "@floating-ui/react": "^0.26.12",
-    "@floating-ui/react-dom": "^2.0.8",
+    "@floating-ui/react": "^0.26.28",
+    "@floating-ui/react-dom": "^2.1.2",
     "@markprompt/core": "workspace:*",
     "@radix-ui/react-accessible-icon": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "2.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-visually-hidden": "^1.1.0",
-    "clsx": "^2.1.0",
-    "downshift": "^9.0.4",
+    "clsx": "^2.1.1",
+    "downshift": "^9.0.8",
     "emittery": "^1.0.3",
-    "immer": "^10.0.4",
+    "immer": "^10.1.1",
     "lodash-es": "^4.17.21",
-    "mdast-util-from-markdown": "^2.0.0",
+    "mdast-util-from-markdown": "^2.0.2",
     "mdast-util-to-string": "^4.0.0",
     "p-debounce": "^4.0.0",
     "react-markdown": "^9.0.1",
     "react-merge-refs": "^2.1.1",
-    "react-textarea-autosize": "^8.5.3",
+    "react-textarea-autosize": "^8.5.5",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.5",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.0.0",
