fix: fast refresh lint warnings (#466)
* Markprompt lint warnings

* fix rest of fast refresh issues

* changeset

* fix peer deps errors

* changeset

* fmt

* error when exporting components

* remove unused eslint directive

--- a/packages/docusaurus-theme-search/package.json
+++ b/packages/docusaurus-theme-search/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "@docusaurus/types": "^3.2.1",
     "@markprompt/css": "workspace:*",
-    "@markprompt/react": "workspace:*"
+    "@markprompt/react": "workspace:*",
+    "acorn": "^8.14.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.2.1",
