--- a/examples/with-docusaurus-swizzled/package.json
+++ b/examples/with-docusaurus-swizzled/package.json
@@ -31,6 +31,7 @@
     "@markprompt/docusaurus-theme-search": "workspace:*",
     "@markprompt/react": "workspace:*",
     "@mdx-js/react": "^3.1.0",
+    "acorn": "^8.14.0",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
