--- a/examples/with-docusaurus/package.json
+++ b/examples/with-docusaurus/package.json
@@ -23,14 +23,17 @@
     ]
   },
   "dependencies": {
+    "@algolia/client-search": "^4.23.3",
     "@docusaurus/core": "^3.2.1",
     "@docusaurus/module-type-aliases": "^3.2.1",
     "@docusaurus/preset-classic": "^3.2.1",
     "@markprompt/docusaurus-theme-search": "workspace:*",
     "@mdx-js/react": "^3.1.0",
+    "acorn": "^8.14.0",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "search-insights": "^2.17.3"
   },
   "devDependencies": {
     "@docusaurus/tsconfig": "^3.2.1",
