--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^9.15.0",
     "husky": "^9.0.11",
     "jsdom": "^25.0.1",
+    "prettier": "^3.4.2",
     "remark-cli": "^12.0.1",
     "remark-frontmatter": "^5.0.0",
     "remark-toc": "^9.0.0",
