--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -31,10 +31,11 @@
   "devDependencies": {
     "@types/react": "^18.3",
     "@types/react-dom": "^18.2",
-    "esbuild": "^0.21.5",
+    "esbuild": "^0.24.0",
     "preact": "^10.20.2",
     "react": "npm:@preact/compat",
-    "react-dom": "npm:@preact/compat"
+    "react-dom": "npm:@preact/compat",
+    "typescript": "^5.7.2"
   },
   "publishConfig": {
     "access": "public"
