--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "@manypkg/cli": "^0.22.0",
     "@markprompt/eslint-config": "workspace:*",
     "@vitest/coverage-v8": "^2.1.6",
-    "eslint": "^9.15.0",
+    "eslint": "^9.16.0",
     "husky": "^9.0.11",
     "jsdom": "^25.0.1",
+    "prettier": "^3.4.2",
     "remark-cli": "^12.0.1",
     "remark-frontmatter": "^5.0.0",
     "remark-toc": "^9.0.0",
@@ -40,14 +41,14 @@
     "stylelint": "^16.10.0",
     "stylelint-config-standard": "^36.0.1",
     "turbo": "^2.3.0",
-    "typescript": "^5.6.3",
+    "typescript": "^5.7.2",
     "unified-prettier": "^2.0.1",
     "vitest": "^2.1.4"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.25.0"
   },
-  "packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387",
+  "packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab",
   "pnpm": {
     "overrides": {
       "@types/react": "^18.3",
