--- a/packages/docusaurus-theme-search/package.json
+++ b/packages/docusaurus-theme-search/package.json
@@ -27,11 +27,11 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.2.1",
-    "@types/react": "^18.3",
-    "react": "^18.2.0"
+    "@types/react": "^19.0.1",
+    "react": "^19.0.0"
   },
   "peerDependencies": {
-    "react": "^18"
+    "react": "^18.3 || ^19"
   },
   "publishConfig": {
     "access": "public"
