--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -64,17 +64,17 @@
     "@testing-library/react": "^15.0.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/lodash-es": "^4.17.12",
-    "@types/react": "^18.3",
-    "@types/react-dom": "^18.2",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "msw": "^2.6.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "vite-tsconfig-paths": "^5.1.1"
   },
   "peerDependencies": {
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3 || ^19",
+    "react-dom": "^18.3 || ^19"
   },
   "publishConfig": {
     "access": "public"
