--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -29,12 +29,12 @@
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@types/react": "^18.3",
-    "@types/react-dom": "^18.2",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
     "esbuild": "^0.24.0",
-    "preact": "^10.20.2",
-    "react": "npm:@preact/compat",
-    "react-dom": "npm:@preact/compat"
+    "preact": "^10.25.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "publishConfig": {
     "access": "public"
