--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,7 +25,9 @@
     }
   },
   "main": "./dist/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc --build tsconfig.build.json",
     "dev": "tsc --build tsconfig.build.json --watch",
@@ -53,7 +55,7 @@
     "p-debounce": "^4.0.0",
     "react-markdown": "^9.0.1",
     "react-merge-refs": "^2.1.1",
-    "react-textarea-autosize": "^8.5.5",
+    "react-textarea-autosize": "^8.5.6",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.5",
     "zustand": "^4.5.5"
