--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -33,8 +33,8 @@
     "@types/react-dom": "^19.0.2",
     "esbuild": "^0.24.0",
     "preact": "^10.25.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "npm:@preact/compat",
+    "react-dom": "npm:@preact/compat"
   },
   "publishConfig": {
     "access": "public"
