--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -26,6 +26,14 @@
     "jsx": "preserve",
     "verbatimModuleSyntax": true,
 
+    "baseUrl": "./",
+    "paths": {
+      "react": ["./node_modules/preact/compat/"],
+      "react/jsx-runtime": ["./node_modules/preact/jsx-runtime"],
+      "react-dom": ["./node_modules/preact/compat/"],
+      "react-dom/*": ["./node_modules/preact/compat/*"]
+    },
+
     // runtime
     "lib": ["dom", "dom.iterable", "es2023"]
   },
