--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -37,12 +37,12 @@
     "@floating-ui/react": "^0.26.28",
     "@floating-ui/react-dom": "^2.1.2",
     "@markprompt/core": "workspace:*",
-    "@radix-ui/react-accessible-icon": "^1.1.0",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-visually-hidden": "^1.1.0",
+    "@radix-ui/react-accessible-icon": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.3",
+    "@radix-ui/react-navigation-menu": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-visually-hidden": "^1.1.1",
     "clsx": "^2.1.1",
     "downshift": "^9.0.8",
     "emittery": "^1.0.3",
@@ -53,7 +53,7 @@
     "p-debounce": "^4.0.0",
     "react-markdown": "^9.0.1",
     "react-merge-refs": "^2.1.1",
-    "react-textarea-autosize": "^8.5.5",
+    "react-textarea-autosize": "^8.5.6",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.5",
     "zustand": "^4.5.5"
@@ -64,17 +64,17 @@
     "@testing-library/react": "^15.0.2",
     "@testing-library/user-event": "^14.5.2",
     "@types/lodash-es": "^4.17.12",
-    "@types/react": "^18.3",
-    "@types/react-dom": "^18.2",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "msw": "^2.6.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "vite-tsconfig-paths": "^5.1.1"
   },
   "peerDependencies": {
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3 || ^19",
+    "react-dom": "^18.3 || ^19"
   },
   "publishConfig": {
     "access": "public"
