--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -23,16 +23,19 @@
     "declaration": true,
     "declarationMap": true,
     "composite": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "verbatimModuleSyntax": true,
 
-    // runtime
-    "lib": ["dom", "dom.iterable", "es2023"],
-
+    "baseUrl": "./",
     "paths": {
-      "react": ["./node_modules/preact/compat"],
-      "react-dom": ["./node_modules/preact/compat"]
-    }
+      "react": ["./node_modules/preact/compat/"],
+      "react/jsx-runtime": ["./node_modules/preact/jsx-runtime"],
+      "react-dom": ["./node_modules/preact/compat/"],
+      "react-dom/*": ["./node_modules/preact/compat/*"]
+    },
+
+    // runtime
+    "lib": ["dom", "dom.iterable", "es2023"]
   },
   "include": ["src/"],
   "exclude": ["**/node_modules/", "dist/", ".turbo/"]
