--- a/biome.jsonc
+++ b/biome.jsonc
@@ -83,8 +83,11 @@
         "noCommonJs": "error",
         "noDuplicateElseIf": "error",
         "noIrregularWhitespace": "error",
+        "noStaticElementInteractions": "error",
         "noUselessEscapeInRegex": "error",
-        "useAdjacentOverloadSignatures": "error"
+        "useAdjacentOverloadSignatures": "error",
+        "useAriaPropsSupportedByRole": "error",
+        "useValidAutocomplete": "error"
       }
     }
   },
