--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -15,8 +15,8 @@
     // transpilation
     "module": "nodenext",
     "moduleResolution": "nodenext",
-    "baseUrl": ".",
-    "noEmit": true,
+    "rootDir": "src/",
+    "outDir": "dist/",
 
     "sourceMap": true,
     "declaration": true,
@@ -27,6 +27,13 @@
     // runtime
     "lib": ["dom", "dom.iterable", "es2023"]
   },
-  "include": ["./"],
-  "exclude": [".turbo/", "**/node_modules", "dist/"]
+  "include": ["src/"],
+  "exclude": [
+    ".turbo/",
+    "**/node_modules",
+    "dist/",
+    "src/**/*.test.ts",
+    "src/**/*.test.tsx",
+    "src/test-utils.ts"
+  ]
 }
